# shared/DTOs/UpdateTenantStatusRequest.cs
@@ -1,0 +1,11 @@
+using System.ComponentModel.DataAnnotations;
+using Shared.Models;
+
+namespace Shared.DTOs
+{
+    public class UpdateTenantStatusRequest
+    {
+        [Required]
+        public TenantStatus Status { get; set; }
+    }
+}
